# Kivo

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  tests.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: main.rs
desktop/src/http/: client.rs  models.rs
desktop/src/storage/: mod.rs  tests.rs
desktop/src/storage/import/: mod.rs
desktop/src/storage/models/: mod.rs
scripts/: tauri-runner.mjs
src/: index.css
src/app/: App.jsx
src/components/: Updater.jsx
src/components/ui/: JsonTree.jsx
src/components/workspace/: AppHeader.jsx  AppSettingsPage.jsx  CodeEditor.jsx  CollectionSettingsPage.jsx  OAuth2Panel.jsx  RequestPane.jsx  RequestTabs.jsx  SetupWizard.jsx  Sidebar.jsx  WorkspaceModal.jsx  WorkspaceView.jsx
src/hooks/: use-collection-config.js  use-workspace-store.js
src/lib/: http-client.js  http-ui.js  workspace-store.js  workspace-utils.js
